fix scroller so it only scrolls when new alerts appear. Also adjust css to align text better

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   margin: 16px;
   padding: 4px;
   border-radius: 10px;
-  width: 800px;
+  max-width: 1200px;
   font-size: 32px;
 }
 
@@ -27,6 +27,10 @@
   align-items: center;
   color: white;
   text-decoration: none;
+}
+
+.alert div {
+  width: -webkit-fill-available;
 }
 
 .alert.red {
